bugfix discounted prices, initial values in cart form, details page white space

--- a/client/src/components/products/ProductDetails.css
+++ b/client/src/components/products/ProductDetails.css
@@ -49,6 +49,7 @@
 	line-height: 2em;
 	padding: 2rem;
 	word-wrap: break-word;
+	white-space: pre;
 }
 
 /*Cart Form*/
